# HousePricePredictor

./: .dockerignore  .env.example  .gitignore  .project-root  Dockerfile  LICENSE  Pipeline_runner.py  README.md  demo.py  docker-compose.yaml  main.py  mlflow.db  pyproject.toml  requirements.txt  setup.py
artifact/02_04_2026_21_43_28/data_validation/: validation_report.yaml
artifact/02_04_2026_22_08_11/data_transformed/: Objects  test.npy  train.npy
artifact/02_04_2026_22_08_11/data_validation/: validation_report.yaml
config/: model.yaml  schema.yaml
notebook/: exp-notebook.ipynb  mongodb_demo.ipynb
saved_model/: Objects  run_training.yaml
src/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_trainer.py
src/configuration/: mongo_db_connections.py
src/constants/: __init__.py
src/data_access/: proj1_data.py
src/entity/: artifact_entity.py  config_entity.py  estimator.py
src/logger/: __init__.py
src/pipeline/: prediction_pipeline.py  training_pipeline.py
src/utils/: main_utils.py
templates/: experiment.html  index.html
