[project]
name = "housepricepredictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dagshub>=0.6.5",
    "dill>=0.4.1",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "kagglehub>=0.4.2",
    "mlflow>=3.9.0",
    "motor>=3.7.1",
    "smogn>=0.1.2",
    "from-root>=1.3.0",
]
